# dsx-connect

./: .dockerignore  .gitignore  404.html  AGENTS.md  DEVELOPER_TASKS.md  DEVELOPER_TEST_TASKS.md  NOTICE.md  README.md  docreview.md  index.html  mkdocs.yml  pytest.ini  tasks.py  test-tasks.py
.codex/: AGENTS.md  codex.toml
connectors/: index.html
cookiecutter-dsx-connectors/: README.md  cookiecutter.json
docs/: index.md  overview-quick-start.md  overview.md
dsx_connect/: .dev.env  .devenv  .dockerignore  Dockerfile  README.md  config.py  dsx-connect-api-start.py  dsx-connect-start.py  dsx-connect-workers-start.py  requirements.txt  tasks.py  version.py
dsxa_sdk/: .gitignore  README.md  pyproject.toml
dsxa_sdk/dsxa_sdk/: __init__.py  cli.py  client.py  config_store.py  exceptions.py  models.py
dsxa_sdk/tests/: conftest.py  test_dsxa_sdk_client.py  test_dsxa_sdk_integration.py
overview/: index.html
overview-quick-start/: index.html
scripts/: setup-colima-traefik-lb.sh
search/: search_index.json
shared/: async_ops.py  dev_env.py  dsx_logging.py  file_ops.py  log_chain.py  pyproject.toml  routes.py  streaming.py
shared/auth/: __init__.py  hmac.py
shared/deploy/certs/: README.md  dev.localhost.crt  dev.localhost.key
shared/docs/: filters.md
shared/graph/: __init__.py  base.py  drive.py  subscriptions.py
shared/models/: connector_models.py  status_responses.py
shared/tests/: test_filter_hints.py
tests/: dsxa-scans.http  test_auth_jwt.py  test_client_hmac_and_params.py  test_connectors_full_scan_limit.py  test_devenv.py  test_hmac_shared.py  (+1 more)
(+518 files in other folders)
