[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dsx-connect-shared"
version = "0.0.0"
description = "Shared Python utilities for dsx-connect"
readme = ""
requires-python = ">=3.12"
authors = [{name = "DSX Connect"}]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]

